--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -14,37 +14,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Setup Dashboard
-      run: |
-        sudo apt-get install -y redis-server
-        git clone https://github.com/userdashboard/dashboard.git dashboard
-        cd dashboard
-        npm install redis mocha puppeteer@2.1.1 --no-save
-        mkdir -p node_modules/@userdashboard/storage-redis
-        cp ../index.js node_modules/@userdashboard/storage-redis
-        cp -R ../src node_modules/@userdashboard/storage-redis
+    - name: Setup Redis
+      run: sudo apt-get install -y redis-server
     - name: Test without encryption
-      run: cd dashboard && npm test
-      env:
-        NODE_ENV: testing
-        FAST_START: true
-        DASHBOARD_SERVER: "http://localhost:9000"
-        DOMAIN: "localhost"
-        STORAGE_ENGINE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379"
-        GENERATE_SITEMAP_TXT: false
-        GENERATE_API_TXT: false
+      run: bash test.sh
     - name: Test with encryption
-      run: cd dashboard && npm test
+      run: bash test.sh
       env:
-        NODE_ENV: testing
-        FAST_START: true
-        DASHBOARD_SERVER: "http://localhost:9000"
-        DOMAIN: "localhost"
-        STORAGE_ENGINE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379"
-        GENERATE_SITEMAP_TXT: false
-        GENERATE_API_TXT: false
         ENCRYPTION_SECRET: "12345678901234567890123456789012"
         ENCRYPTION_SECRET_IV: "1234123412341234"
     - name: Publish to NPM
