--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -18,9 +18,26 @@ jobs:
       run: sudo apt-get install -y redis-server
     - name: Test without encryption
       run: bash test.sh
+      env:
+        NODE_ENV: "testing"
+        FAST_START: "true"
+        DASHBOARD_SERVER: http://localhost:9000
+        DOMAIN: "localhost"
+        STORAGE_ENGINE: "@userdashboard/storage-redis"
+        REDIS_URL: "redis://localhost:6379/1"
+        GENERATE_SITEMAP_TXT: "false"
+        GENERATE_API_TXT: "false"
     - name: Test with encryption
       run: bash test.sh
       env:
+        NODE_ENV: "testing"
+        FAST_START: "true"
+        DASHBOARD_SERVER: "http://localhost:9000"
+        DOMAIN: "localhost"
+        STORAGE_ENGINE: "@userdashboard/storage-redis"
+        REDIS_URL: "redis://localhost:6379/1"
+        GENERATE_SITEMAP_TXT: "false"
+        GENERATE_API_TXT: "false"
         ENCRYPTION_SECRET: "12345678901234567890123456789012"
         ENCRYPTION_SECRET_IV: "1234123412341234"
     - name: Publish to NPM
