--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -16,8 +16,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Setup Redis
       run: sudo apt-get install -y redis-server
+    - name: Setup dependencies
+      run: |
+        git clone https://github.com/userdashboard/dashboard.git instance
+        cd instance
+        npm install redis mocha puppeteer@2.1.1 --no-save
     - name: Test without encryption
-      run: bash test.sh
+      run: cd dashboard && npm test
       env:
         NODE_ENV: "testing"
         FAST_START: "true"
@@ -28,7 +33,7 @@ jobs:
         GENERATE_SITEMAP_TXT: "false"
         GENERATE_API_TXT: "false"
     - name: Test with encryption
-      run: bash test.sh
+      run: cd dashboard && npm test
       env:
         NODE_ENV: "testing"
         FAST_START: "true"
