--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -21,9 +21,11 @@ jobs:
         git clone https://github.com/userdashboard/dashboard.git /tmp/instance
         cd /tmp/instance
         npm install redis mocha puppeteer@2.1.1 --no-save
-        mkdir -p node_modules/@userdashboard/storage-redis
-        cp ../index.js node_modules/@userdashboard/storage-redis
-        cp -R ../src node_modules/@userdashboard/storage-redis
+    - name: Fake-install module
+      run: |
+        mkdir -p /tmp/instance/node_modules/@userdashboard/storage-redis
+        cp index.js /tmp/instance/node_modules/@userdashboard/storage-redis
+        cp -R src /tmp/instance/node_modules/@userdashboard/storage-redis
     - name: Test without encryption
       run: cd /tmp/instance && npm test
       env:
