--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -41,6 +41,7 @@ jobs:
         REDIS_URL: "redis://localhost:6379/1"
         GENERATE_SITEMAP_TXT: "false"
         GENERATE_API_TXT: "false"
+        LOG_LEVEL: "info,warn,log,error"
     - name: Test encrypted Redis storage
       run: cd /tmp/instance && npm test
       env:
@@ -54,6 +55,7 @@ jobs:
         GENERATE_API_TXT: "false"
         ENCRYPTION_SECRET: "12345678901234567890123456789012"
         ENCRYPTION_SECRET_IV: "1234123412341234"
+        LOG_LEVEL: "info,warn,log,error"
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
