--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -18,20 +18,23 @@ jobs:
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
         npm version patch
-    - name: Setup Redis
+    - name: Install Redis
       run: sudo apt-get install -y redis-server
-    - name: Install dependencies
+    - name: Set up as module
       run: |
-        git clone https://github.com/userdashboard/dashboard.git /tmp/instance
-        cd /tmp/instance
-        npm install redis mocha faker puppeteer@2.1.1 --no-save
-    - name: Fake-install module
-      run: |
-        mkdir -p /tmp/instance/node_modules/@userdashboard/storage-redis
-        cp index.js /tmp/instance/node_modules/@userdashboard/storage-redis
-        cp -R src /tmp/instance/node_modules/@userdashboard/storage-redis
+        HERE=`pwd`
+        mkdir /tmp/project
+        cd /tmp/project
+        npm init -y
+        npm install faker puppeteer@2.1.1 @userdashboard/dashboard @userdashboard/storage-redis
+        npm install -g mocha
+        rm node_modules/@userdashboard/storage-redis/*.js
+        rm -rf node_modules/@userdashboard/storage-redis/src
+        cp $HERE/*.js node_modules/@userdashboard/storage-redis
+        cp -R $HERE/src/ node_modules/@userdashboard/storage-redis/src/
+        echo "global.applicationPath = __dirname" > main.js
     - name: Test unencrypted Redis storage
-      run: cd /tmp/instance && npm test
+      run: cd /tmp/project && mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
       env:
         NODE_ENV: "testing"
         FAST_START: "true"
@@ -43,7 +46,7 @@ jobs:
         GENERATE_API_TXT: "false"
         LOG_LEVEL: "info,warn,log,error"
     - name: Test encrypted Redis storage
-      run: cd /tmp/instance && npm test
+      run: cd /tmp/project && mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
       env:
         NODE_ENV: "testing"
         FAST_START: "true"
