--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -34,7 +34,10 @@ jobs:
         cp -R $HERE/src/ node_modules/@userdashboard/storage-redis/src/
         echo "global.applicationPath = __dirname" > main.js
     - name: Test unencrypted Redis storage
-      run: cd /tmp/project && mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+      run: |
+        cd /tmp/project 
+        mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+        cd $HERE
       env:
         NODE_ENV: "testing"
         FAST_START: "true"
@@ -46,7 +49,10 @@ jobs:
         GENERATE_API_TXT: "false"
         LOG_LEVEL: "info,warn,log,error"
     - name: Test encrypted Redis storage
-      run: cd /tmp/project && mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+      run: |
+        cd /tmp/project 
+        mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+        cd $HERE
       env:
         NODE_ENV: "testing"
         FAST_START: "true"
