--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -17,9 +17,9 @@ jobs:
       run: sudo apt-get install -y redis-server
     - name: Set up as module
       run: |
-        npm install faker puppeteer@2.1.1 @userdashboard/dashboard @userdashboard/storage-redis --no-save
+        npm install faker puppeteer@2.1.1 @userdashboard/dashboard --no-save
         npm install -g mocha
-        rm node_modules/@userdashboard/storage-redis/*.js
+        mkdir -p node_modules/@userdashboard/storage-redis
         rm -rf node_modules/@userdashboard/storage-redis/src
         cp *.js node_modules/@userdashboard/storage-redis
         cp -R src/ node_modules/@userdashboard/storage-redis/src/
