--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -9,51 +9,36 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install Redis
-      run: sudo apt-get install -y redis-server
-    - name: Set up as module
+    - name: Install dependencies
       run: |
-        npm install faker puppeteer@2.1.1 @userdashboard/dashboard --no-save
-        npm install -g mocha
+        sudo apt-get install -y redis-server
+        npm install mocha faker puppeteer@2.1.1 @userdashboard/dashboard --no-save
+        git config --global user.name "${{ secrets.NAME }}"
+        git config --global user.email "${{ secrets.EMAIL }}"
+        npm install -g mocha standard
         mkdir -p node_modules/@userdashboard/storage-redis
         rm -rf node_modules/@userdashboard/storage-redis/src
         cp *.js node_modules/@userdashboard/storage-redis
-        cp -R src/ node_modules/@userdashboard/storage-redis/src/
-    - name: Test unencrypted Redis storage
-      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+        cp -R src/ node_modules/@userdashboard/storage-che-redis/src/
+    - name: Lint (standard.js)
+      run: standard src
+    - name: Increase NPM version
+      run: npm version patch
+    - name: Test
+      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" > tests.txt
       env:
-        NODE_ENV: "testing"
-        FAST_START: "true"
-        DASHBOARD_SERVER: http://localhost:9000
-        DOMAIN: "localhost"
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379/1"
-        GENERATE_SITEMAP_TXT: "false"
-        GENERATE_API_TXT: "false"
-        LOG_LEVEL: "info,warn,log,error"
-    - name: Test encrypted Redis storage
-      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
-      env:
-        NODE_ENV: "testing"
-        FAST_START: "true"
+        NODE_ENV: testing
+        FAST_START: true
         DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379/1"
-        GENERATE_SITEMAP_TXT: "false"
-        GENERATE_API_TXT: "false"
-        ENCRYPTION_SECRET: "12345678901234567890123456789012"
-        ENCRYPTION_SECRET_IV: "1234123412341234"
-        LOG_LEVEL: "info,warn,log,error"
-    - name: Increase NPM version
-      run: |
-        git config --global user.name "${{ secrets.NAME }}"
-        git config --global user.email "${{ secrets.EMAIL }}"
-        npm version patch
+        STORAGE: "@userdashboard/storage-cache-redis"
+        REDIS_URL: "redis://localhost:6379/15"
+        GENERATE_SITEMAP_TXT: false
+        GENERATE_API_TXT: false
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
@@ -64,4 +49,4 @@ jobs:
     - name: Publish to NPM
       uses: JS-DevTools/npm-publish@v1
       with:
-        token: ${{ secrets.NPM_TOKEN }}
+        token: ${{ secrets.NPM_TOKEN }} 
