--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Increase NPM version
       run: npm version patch
     - name: Test
-      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee tests.txt
+      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
       env:
         NODE_ENV: testing
         FAST_START: true
@@ -39,6 +39,7 @@ jobs:
         REDIS_URL: "redis://localhost:6379/15"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
+        LOG_LEVEL: "error,log,debug,info"
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
