--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -15,12 +15,12 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: |
-        sudo apt-get install -y redis-server
+        sudo apt-get install -y redis-server mongodb
         git config --global user.name "${{ secrets.NAME }}"
         git config --global user.email "${{ secrets.EMAIL }}"
         npm version patch
         npm install
-        npm install faker puppeteer@2.1.1 @userdashboard/dashboard --no-save
+        npm install faker puppeteer@2.1.1 @userdashboard/dashboard @userdashboard/storage-mongodb --no-save
         npm install -g mocha standard
         mkdir -p node_modules/@userdashboard/storage-redis
         rm -rf node_modules/@userdashboard/storage-redis/src
@@ -28,7 +28,7 @@ jobs:
         cp -R src/ node_modules/@userdashboard/storage-redis/src/
     - name: Lint (standard.js)
       run: standard src
-    - name: Test
+    - name: Test as shared storage
       run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee tests.txt
       env:
         NODE_ENV: testing
@@ -36,7 +36,46 @@ jobs:
         DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
         STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379/15"
+        REDIS_URL: "mongodb://localhost:6379"
+        GENERATE_SITEMAP_TXT: false
+        GENERATE_API_TXT: false
+    - name: Test as primary storage
+      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+      env:
+        NODE_ENV: testing
+        FAST_START: true
+        DASHBOARD_SERVER: "http://localhost:9000"
+        DOMAIN: "localhost"
+        STORAGE: "@userdashboard/storage-redis"
+        REDIS_URL: "mongodb://localhost:6379"
+        ORGANIZATIONS_STORAGE: "@userdashboard/storage-mongodb"
+        ORGANIZATIONS_ MONGODB_URL: "mongodb://localhost:27017"
+        GENERATE_SITEMAP_TXT: false
+        GENERATE_API_TXT: false
+    - name: Test as module storage
+      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+      env:
+        NODE_ENV: testing
+        FAST_START: true
+        DASHBOARD_SERVER: "http://localhost:9000"
+        DOMAIN: "localhost"
+        STORAGE: "@userdashboard/storage-mongodb"
+        MONGODB_URL: "mongodb://localhost:27017"
+        ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
+        ORGANIZATIONS_REDIS_URL: "mongodb://localhost:6379"
+        GENERATE_SITEMAP_TXT: false
+        GENERATE_API_TXT: false
+    - name: Test as primary and separately as module storage
+      run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
+      env:
+        NODE_ENV: testing
+        FAST_START: true
+        DASHBOARD_SERVER: "http://localhost:9000"
+        DOMAIN: "localhost"
+        STORAGE: "@userdashboard/storage-redis"
+        REDIS_URL: "mongodb://localhost:6379/1"
+        ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
+        ORGANIZATIONS_REDIS_URL: "mongodb://localhost:6379/2"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Publish to Github
