Fix redis address

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -36,7 +36,7 @@ jobs:
         DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
         STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "mongodb://localhost:6379"
+        REDIS_URL: "redis://localhost:6379"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Test as primary storage
@@ -47,7 +47,7 @@ jobs:
         DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
         STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "mongodb://localhost:6379"
+        REDIS_URL: "redis://localhost:6379"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-mongodb"
         ORGANIZATIONS_ MONGODB_URL: "mongodb://localhost:27017"
         GENERATE_SITEMAP_TXT: false
@@ -62,7 +62,7 @@ jobs:
         STORAGE: "@userdashboard/storage-mongodb"
         MONGODB_URL: "mongodb://localhost:27017"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
-        ORGANIZATIONS_REDIS_URL: "mongodb://localhost:6379"
+        ORGANIZATIONS_REDIS_URL: "redis://localhost:6379"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Test as primary and separately as module storage
@@ -73,9 +73,9 @@ jobs:
         DASHBOARD_SERVER: "http://localhost:9000"
         DOMAIN: "localhost"
         STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "mongodb://localhost:6379/1"
+        REDIS_URL: "redis://localhost:6379/1"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
-        ORGANIZATIONS_REDIS_URL: "mongodb://localhost:6379/2"
+        ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/2"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
     - name: Publish to Github
