--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -20,12 +20,15 @@ jobs:
         git config --global user.email "${{ secrets.EMAIL }}"
         npm version patch
         npm install
-        npm install faker puppeteer@2.1.1 @userdashboard/dashboard @userdashboard/storage-mongodb --no-save
+        npm install faker puppeteer@2.1.1 @userdashboard/dashboard  @userdashboard/organizations @userdashboard/storage-mongodb --no-save
         npm install -g mocha standard
         mkdir -p node_modules/@userdashboard/storage-redis
         rm -rf node_modules/@userdashboard/storage-redis/src
         cp *.js node_modules/@userdashboard/storage-redis
         cp -R src/ node_modules/@userdashboard/storage-redis/src/
+        PACKAGE=`cat package.json`
+        PACKAGE=${PACKAGE/\"description\"\: \"\"/\"dashboard\": \{ \"modules\"\: \[\"@userdashboard/organizations\"\] \}}
+        echo $PACKAGE > package.json
     - name: Lint (standard.js)
       run: standard src
     - name: Test as shared storage
