--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -23,9 +23,9 @@ jobs:
         npm install faker puppeteer@2.1.1 @userdashboard/dashboard  @userdashboard/organizations @userdashboard/storage-mongodb --no-save
         npm install -g mocha standard
         mkdir -p node_modules/@userdashboard/storage-redis
-        rm -rf node_modules/@userdashboard/storage-redis/src
         cp *.js node_modules/@userdashboard/storage-redis
         cp -R src/ node_modules/@userdashboard/storage-redis/src/
+        cp package.json package.json.old
         PACKAGE=`cat package.json`
         PACKAGE=${PACKAGE/\"description\"\: \"\"/\"dashboard\": \{ \"modules\"\: \[\"@userdashboard/organizations\"\] \}}
         echo $PACKAGE > package.json
@@ -81,6 +81,10 @@ jobs:
         ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/2"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
+    - name: Clean up
+      run: |
+        rm package.json
+        mv package.json.old package.json
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
