--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -42,6 +42,7 @@ jobs:
         REDIS_URL: "redis://localhost:6379"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
+        LOG_LEVEL: "info,warn,error,log"
     - name: Test as primary storage
       run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
       env:
@@ -55,6 +56,7 @@ jobs:
         ORGANIZATIONS_ MONGODB_URL: "mongodb://localhost:27017"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
+        LOG_LEVEL: "info,warn,error,log"
     - name: Test as module storage
       run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
       env:
@@ -68,6 +70,7 @@ jobs:
         ORGANIZATIONS_REDIS_URL: "redis://localhost:6379"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
+        LOG_LEVEL: "info,warn,error,log"
     - name: Test as primary and separately as module storage
       run: mocha --file test-helper.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js"
       env:
@@ -81,6 +84,7 @@ jobs:
         ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/2"
         GENERATE_SITEMAP_TXT: false
         GENERATE_API_TXT: false
+        LOG_LEVEL: "info,warn,error,log"
     - name: Clean up
       run: |
         rm package.json
