--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,26 +1,30 @@
-name: test-and-publish
+name: publish
 
 on: [push]
 
 jobs:
-  test-and-publish:
+  publish:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.15.1]
-        mongodb-version: [4.4]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 14
+    - name: Lint JavaScript source with standard.js
+      run: |
+        if [ ! -z "$NPM_PROXY" ]; then
+          npm --registry=$NPM_PROXY install standard -g
+        else
+          npm install standard -g
+        fi        
+        standard
     - uses: zhulik/redis-action@1.1.0
       with:
         redis version: '5'
         number of databases: 2
     - uses: supercharge/mongodb-github-action@1.3.0
       with:
-        mongodb-version: ${{ matrix.mongodb-version }}
+        mongodb-version: 4.4.2
     - name: Optionally install Chromium via APT instead of puppeteer
       run: |
         if [ ! -z "$PUPPETEER_SKIP_CHROMIUM_DOWNLOAD" ]; then
@@ -50,23 +54,19 @@ jobs:
         HERE=`pwd`
         mkdir /tmp/project
         cd /tmp/project
+        if [ -d /opt/hostedtoolcache/node/ ]; then
+          alias node=`find /opt/hostedtoolcache/node/ -type f -name node`
+          alias npm=`find /opt/hostedtoolcache/node/ -type f -name npm`
+        fi
         npm init -y
         npm install "$HERE" @userdashboard/dashboard @userdashboard/organizations @userdashboard/storage-mongodb mocha faker puppeteer
         PACKAGE=`cat package.json`
         PACKAGE=${PACKAGE/\"deprecated\"\: false/\"dashboard\": \{ \"modules\"\: \[\"@userdashboard/organizations\"\] \}}
         echo $PACKAGE > package.json
         echo "global.applicationPath = __dirname" > main.js
-    - name: Lint with standard.js
-      run: |
-        if [ ! -z "$NPM_PROXY" ]; then
-          npm --registry=$NPM_PROXY install standard -g
-        else
-          npm install standard -g
-        fi        
-        standard
     - name: Test as only storage for Dashboard and modules
       run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee tests.txt
+        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
         TESTS=`cat tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
@@ -76,9 +76,10 @@ jobs:
         NODE_ENV: testing
         STORAGE: "@userdashboard/storage-redis"
         REDIS_URL: "redis://localhost:6379"
+        NODE_OPTIONS: "--preserve-symlinks"
     - name: Test as Dashboard storage with module on other type
       run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee tests.txt
+        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
         TESTS=`cat tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
@@ -90,9 +91,10 @@ jobs:
         REDIS_URL: "redis://localhost:6379"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-mongodb"
         ORGANIZATIONS_MONGODB_URL: "mongodb://localhost:27017"
+        NODE_OPTIONS: "--preserve-symlinks"
     - name: Test as module storage with Dashboard on other type
       run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee tests.txt
+        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
         TESTS=`cat tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
@@ -104,9 +106,10 @@ jobs:
         MONGODB_URL: "mongodb://localhost:27017"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
         ORGANIZATIONS_REDIS_URL: "redis://localhost:6379"
+        NODE_OPTIONS: "--preserve-symlinks"
     - name: Test as Dashboard and module storage using separate servers
       run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --full-trace --recursive --timeout 90000000 "./node_modules/@userdashboard/**/{,!(public)}/*.test.js" | tee tests.txt
+        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
         TESTS=`cat tests.txt`
         if [[ "$TESTS" == *" 1)"* ]]; then
           exit 1
@@ -118,6 +121,7 @@ jobs:
         REDIS_URL: "redis://localhost:6379/1"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
         ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/2"
+        NODE_OPTIONS: "--preserve-symlinks"
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
       with:
