--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "dependencies": {
     "redis": "^2.8.0"
   },
-  "deprecated": false,
   "description": "Use Redis as storage for Dashboard",
+  "devDependencies": {
+    "@userdashboard/dashboard": "1.x"
+  },
   "engines": {
-    "node" : ">=12.0",
-    "npm" : ">=6.0"
+    "node": ">=14.0",
+    "npm": ">=6.0"
   },
   "license": "MIT",
   "main": "index.js",
   "name": "@userdashboard/storage-redis",
+  "optionalDependencies": {
+    "@userdashboard/dashboard": "1.x"
+  },
+  "peerDependencies": {
+    "@userdashboard/dashboard": "1.x"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/userdashboard/storage-redis.git"
@@ -18,14 +26,5 @@
   "scripts": {
     "test": "act -j test"
   },
-  "version": "1.0.22",
-  "peerDependencies": {
-    "@userdashboard/dashboard": "1.x"
-  },
-  "optionalDependencies": {
-    "@userdashboard/dashboard": "1.x"
-  },
-  "devDependencies": {
-    "@userdashboard/dashboard": "1.x"
-  }
+  "version": "1.0.22"
 }
