--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "description": "Use Redis as storage for Dashboard",
   "devDependencies": {
-    "@userdashboard/dashboard": "1.x"
+    "@userdashboard/dashboard": ">=1"
   },
   "engines": {
     "node": ">=14.0",
@@ -14,10 +14,10 @@
   "main": "index.js",
   "name": "@userdashboard/storage-redis",
   "optionalDependencies": {
-    "@userdashboard/dashboard": "1.x"
+    "@userdashboard/dashboard": ">=1"
   },
   "peerDependencies": {
-    "@userdashboard/dashboard": "1.x"
+    "@userdashboard/dashboard": ">=1"
   },
   "repository": {
     "type": "git",
