--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,13 +72,13 @@ jobs:
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
         ORGANIZATIONS_REDIS_URL: redis://localhost:6379
         NODE_OPTIONS: --preserve-symlinks
-    - name: Test as Dashboard and module storage using separate servers
+    - name: Test as Dashboard and module using two instances of storage
       run: ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z]/node_modules | sort -k5.1,8.1 -t /)
       working-directory: /tmp/project
       env:
         NODE_ENV: testing
         STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379/1"
+        REDIS_URL: "redis://localhost:6379/0"
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
-        ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/2"
+        ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/1"
         NODE_OPTIONS: --preserve-symlinks
