--- a/.github/workflows/test-module-storage.yml
+++ b/.github/workflows/test-module-storage.yml
@@ -1,11 +1,10 @@
-name: test
+name: test-module-storage
 
 on: [push]
 
 jobs:
-  test:
+  test-module-storage:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
@@ -34,8 +33,8 @@ jobs:
         mkdir /tmp/project
         cd /tmp/project
         if [ -d /opt/hostedtoolcache/node/ ]; then
-          alias node=`find /opt/hostedtoolcache/node/ -type f -name node`
-          alias npm=`find /opt/hostedtoolcache/node/ -type f -name npm`
+          alias node=`find /opt/hostedtoolcache/node/ -maxdepth 4 -name node`
+          alias npm=`find /opt/hostedtoolcache/node/ -maxdepth 4 -name npm`
         fi
         npm init -y
         npm install "$HERE" @userdashboard/dashboard @userdashboard/organizations @userdashboard/storage-mongodb mocha faker puppeteer
@@ -44,24 +43,6 @@ jobs:
         echo $PACKAGE > package.json
         echo "global.applicationPath = __dirname" > main.js
         echo "require('@userdashboard/storage-redis/test-helper.js')" >> main.js
-    - name: Test as only storage for Dashboard and modules
-      run: ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /)
-      working-directory: /tmp/project
-      env:
-        NODE_ENV: testing
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: redis://localhost:6379
-        NODE_OPTIONS: --preserve-symlinks
-    - name: Test as Dashboard storage with module on other type
-      run: ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /)
-      working-directory: /tmp/project
-      env:
-        NODE_ENV: testing
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: redis://localhost:6379
-        ORGANIZATIONS_STORAGE: "@userdashboard/storage-mongodb"
-        ORGANIZATIONS_MONGODB_URL: mongodb://localhost:27017
-        NODE_OPTIONS: --preserve-symlinks
     - name: Test as module storage with Dashboard on other type
       run: ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /)
       working-directory: /tmp/project
@@ -71,14 +52,4 @@ jobs:
         MONGODB_URL: mongodb://localhost:27017
         ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
         ORGANIZATIONS_REDIS_URL: redis://localhost:6379
-        NODE_OPTIONS: --preserve-symlinks
-    - name: Test as Dashboard and module using two instances of storage
-      run: ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /)
-      working-directory: /tmp/project
-      env:
-        NODE_ENV: testing
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379/0"
-        ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
-        ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/1"
         NODE_OPTIONS: --preserve-symlinks
