--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "redis": "^3.0.2"
+  }, 
+  "peerDependencies": {
+    "@userdashboard/dashboard": "1.0.0 - 9999.9999.9999"
   },
   "description": "Use Redis as storage for Dashboard",
   "engines": {
