--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "redis": "^3.0.2"
   }, 
   "peerDependencies": {
-    "@userdashboard/dashboard": "1.0.0 - 9999.9999.9999"
+    "@userdashboard/dashboard": "1.x - latest"
   },
   "devDependencies": {
-    "@userdashboard/dashboard": "1.0.0 - 9999.9999.9999"
+    "@userdashboard/dashboard": "1.x - latest"
   },
   "optionalDependencies": {
-    "@userdashboard/dashboard": "1.0.0 - 9999.9999.9999"
+    "@userdashboard/dashboard": "1.x - latest"
   },
   "description": "Use Redis as storage for Dashboard",
   "engines": {
